atualizando a documentacao metodo de login
